[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "coloradomesh"
version = "VERSIONADDEDBYGITHUB"
description = "A utility package for Colorado Mesh-related projects"
readme = "README.md"
authors = [
    { name = "Nate Harris", email = "nwithan8@users.noreply.github.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10, <4"
keywords = [
    "Denver",
    "Colorado",
    "ColoradoMesh",
    "DenverMesh",
    "mesh",
    "Meshtastic",
    "MeshCore"
]
dependencies = [
    "pydantic>=2.12.5",
    "objectrest==2.0.*",
    "colorado-py>=0.3.2",
    "paho-mqtt>=2.1.0",
    "meshtastic-mqtt-json==3.0.0",
    "pynacl",
    "geopy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/Colorado-Mesh/coloradomesh_python"
Download = "https://github.com/Colorado-Mesh/coloradomesh_python/archive/refs/tags/VERSIONADDEDBYGITHUB.tar.gz"

[project.optional-dependencies]
dev = [
    "twine",
    "black",
    "flake8",
    "isort",
    "pytest-cov==3.*",
    "pytest-vcr==1.*",
    "pytest==7.*",
    "types-requests",
    "types-urllib3",
    "vcrpy==4.*",
    "pre-commit",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-jsonschema",
    "sphinx-pydantic",
    "sphinx_autodoc_typehints",
    "datamodel-code-generator",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "examples",
    "data"
]

[tool.setuptools]
include-package-data = true

